Added more style

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="css/style.css" type="text/css" rel="stylesheet" />
 
     <title>Hong's Résumé</title>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/fontawesome.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0-12/css/all.min.css" rel="stylesheet">
     <link rel="shortcut icon" href="favicon.ico" />
 </head>
 
@@ -21,10 +21,16 @@
         <div class="row">
             <div class="col-md-4 left-side">
                 <header>
-                    <img src="https://placeimg.com/500/500/nature" alt="Hong Wang" style="width:100%">
-                    Download CV
-                    <h1>Hong Wang</h1>
-                    <span>Computer Science Major</span>
+                    <div class="profile">
+                        <div class="picture">
+                            <img src="https://placeimg.com/500/500/nature" alt="Hong Wang">
+                        </div>
+                        <a class="btn btn-download" href="#" role="button" download>
+                            <i class="fas fa-file-alt"></i> Download CV
+                        </a>
+                        <h1>Hong Wang</h1>
+                        <span>Computer Science Major</span>
+                    </div>
                 </header>
             </div>
 
