--- a/index.html
+++ b/index.html
@@ -19,22 +19,27 @@
 <body>
     <main class="container">
         <div class="row">
-            <div class="col-md-4 left-side">
+            <div class="col-lg-4 left-side">
                 <header>
                     <div class="profile">
                         <div class="picture">
-                            <img src="https://placeimg.com/500/500/nature" alt="Hong Wang">
+                            <img src="https://placeimg.com/700/700/nature" alt="Hong Wang">
                         </div>
                         <a class="btn btn-download" href="#" role="button" download>
-                            <i class="fas fa-file-alt"></i> Download CV
+                            <i class="fas fa-file-alt"></i> Download Résumé
                         </a>
                         <h1>Hong Wang</h1>
                         <span>Computer Science Major</span>
                     </div>
+                    <ul class="social">
+                        <li><i class="fas fa-envelope"></i> <span id="email">contact[at]hongwang.me</span></li>
+                        <li><i class="fab fa-github"></i> <a target="_blank" href="https://github.com/H0NGWANG">H0NGWANG</a></li>
+                        <li><i class="fab fa-linkedin"></i> <a target="_blank" href="https://www.linkedin.com/in/h0ngwang/">H0NGWANG</a></li>
+                    </ul>
                 </header>
             </div>
 
-            <div class="col-md-8 right-side">
+            <div class="col-lg-8 right-side">
                 <article>
                     <section>
                         <h2>Work Experience</h2>
@@ -48,7 +53,7 @@
                 </article>
                 <footer>
                     <small class="copyright">
-                        Designed with ❤ by <a href="#" target="_blank" rel="nofollow">Hong Wang</a>
+                        Designed with <i class="fas fa-heart"></i> by <a href="#" target="_blank" rel="nofollow">Hong Wang</a>
                     </small>
                 </footer>
             </div>
@@ -56,6 +61,7 @@
     </main>
 
     <!-- Optional JavaScript -->
+    <script src="js/script.js" type="text/javascript"></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
