Update CSS Update CV Add Google reCAPTCHA v2

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <title>Hong's Résumé</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0-12/css/all.min.css" rel="stylesheet">
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <link rel="shortcut icon" href="favicon.ico" />
 </head>
 
@@ -25,7 +26,7 @@
                         <div class="picture">
                             <img src="https://placeimg.com/700/700/nature" alt="Hong Wang">
                         </div>
-                        <a class="btn btn-download" href="#" role="button" download>
+                        <a class="btn btn-cv" href="http://bit.ly/hong-resume" role="button" download>
                             <i class="fas fa-file-alt"></i> Download Résumé
                         </a>
                         <h1>Hong Wang</h1>
@@ -36,24 +37,162 @@
                         <li><i class="fab fa-github"></i> <a target="_blank" href="https://github.com/H0NGWANG">H0NGWANG</a></li>
                         <li><i class="fab fa-linkedin"></i> <a target="_blank" href="https://www.linkedin.com/in/h0ngwang/">H0NGWANG</a></li>
                     </ul>
+
+                    <p>I am a highly motivated, confident professional, with
+                        excellent organizational and time management skills.
+                        I’m able to work both independently and in a team, under
+                        pressure and on multiple projects with a tight schedule.
+                        I’m also able to prioritize multiple and diverse tasks
+                        and to strategize projects.</p>
                 </header>
             </div>
 
             <div class="col-lg-8 right-side">
                 <article>
                     <section>
-                        <h2>Work Experience</h2>
+                        <h2 class="section-title">
+                            <span class="fa-stack fa-xs">
+                                <i class="fas fa-circle fa-stack-2x"></i>
+                                <i class="fas fa-briefcase fa-stack-1x fa-inverse"></i>
+                            </span>
+                            Experience
+                        </h2>
+                        <div class="job">
+                            <div class="upper-row">
+                                <h3 class="company">TPA Georgia / Athens, GA</h3>
+                                <div class="time">Aug. 2018 – Aug. 2019</div>
+                            </div>
+                            <div class="job-title">Full Stack Developer & Graphic Designer</div>
+
+                            <ul>
+                                <li>Built the website with WordPress and utilized CDN to add the extra layer of security as well as performance.</li>
+                                <li>Designed graphics such as logo, billboard, and business card using photoshop.</li>
+                                <li>Optimized website for SEO, run ad campaigns on several ad platforms such as Google Ads to drive leads.</li>
+                            </ul>
+                        </div>
+
+                        <div class="job">
+                            <div class="upper-row">
+                                <h3 class="company">ZeeZor / Suwanee, GA</h3>
+                                <div class="time">May. 2016 – Aug. 2016</div>
+                            </div>
+                            <div class="job-title">Full Stack Developer & Graphic Designer</div>
+
+                            <ul>
+                                <li>Developed various features for the partner portal of a multi-billion business called Aveda.</li>
+                                <li>Redesigned graphics including the logo with flat design using photoshop.</li>
+                            </ul>
+                        </div>
+
+                        <div class="job">
+                            <div class="upper-row">
+                                <h3 class="company"><abbr title="Gwinnett County Public Schools">GCPS</abbr> / Suwanee, GA</h3>
+                                <div class="time">May. 2015 – Aug. 2015</div>
+                            </div>
+                            <div class="job-title">Summer Intern</div>
+
+                            <ul>
+                                <li>Built the Gwinnett Academies website for the County public school's central office with WordPress.</li>
+                                <li>Created a custom WordPress plugin using PHP to provide integration with EspoCRM.</li>
+                            </ul>
+                        </div>
+
+                        <div class="job">
+                            <div class="upper-row">
+                                <h3 class="company">360i / Suwanee, GA</h3>
+                                <div class="time">Jul. 2013 – Aug. 2014</div>
+                            </div>
+                            <div class="job-title">Summer Intern</div>
+
+                            <ul>
+                                <li>Created a prototype tool using Bootstrap, HTML, CSS, jQuery, PHP, and MySQL for a client called Equifax.</li>
+                                <li>The tool allows the user to generate various kind of chart/graph based on the data from MySQL database.</li>
+                            </ul>
+                        </div>
+
+                        <div class="job" style="margin-bottom:-15px;">
+                            <div class="upper-row">
+                                <h3 class="company"><abbr title="Minecraft Bulletin Board System">MCBBS</abbr> / Suwanee, GA</h3>
+                                <div class="time">May. 2011 – Aug. 2014</div>
+                            </div>
+                            <div class="job-title">Forum Moderator</div>
+
+                            <ul>
+                                <li>Managed a forum that has over a few million users.</li>
+                                <li>Developed a popular Minecraft MOD during the year of 2012 using Java, ModLoader API, and MCP.</li>
+                            </ul>
+                        </div>
                     </section>
 
                     <section>
+                        <h2 class="section-title">
+                            <span class="fa-stack fa-xs">
+                                <i class="fas fa-circle fa-stack-2x"></i>
+                                <i class="fas fa-medal fa-stack-1x fa-inverse"></i>
+                            </span>
+                            Honors & Awards
+                        </h2>
                     </section>
 
                     <section>
+                        <h2 class="section-title">
+                            <span class="fa-stack fa-xs">
+                                <i class="fas fa-circle fa-stack-2x"></i>
+                                <i class="fas fa-graduation-cap fa-stack-1x fa-inverse"></i>
+                            </span>
+                            Education
+                        </h2>
+
+                        <div class="job">
+                            <div class="upper-row">
+                                <h3 class="company">University of Georgia</h3>
+                                <div class="time">Aug. 2016 – Present</div>
+                            </div>
+                            <div class="job-title">Bachelor of Science, Computer Science</div>
+                        </div>
+                    </section>
+
+                    <section>
+                        <h2 class="section-title">
+                            <span class="fa-stack fa-xs">
+                                <i class="fas fa-circle fa-stack-2x"></i>
+                                <i class="fas fa-wrench fa-stack-1x fa-inverse"></i>
+                            </span>
+                            Skills and Proficiencies
+                        </h2>
+                    </section>
+
+                    <section>
+                        <h2 class="section-title">
+                            <span class="fa-stack fa-xs">
+                                <i class="fas fa-circle fa-stack-2x"></i>
+                                <i class="fas fa-address-card fa-stack-1x fa-inverse"></i>
+                            </span>
+                            Let's Get in Touch
+                        </h2>
+
+                        <form class="contact-form" id="contact-form" method="POST" />
+                        <div class="form-group">
+                            <input type="text" required="" name="name" class="form-control" placeholder="Full name">
+                        </div>
+                        <div class="form-group">
+                            <input type="email" required="" name="_replyto" class="form-control" placeholder="Email">
+                        </div>
+                        <div class="form-group">
+                            <input type="text" required="" name="subject" class="form-control" placeholder="Subject">
+                        </div>
+                        <div class="form-group">
+                            <textarea rows="4" required="" name="message" class="form-control" placeholder="Message"></textarea>
+                        </div>
+                        <input type="text" name="_gotcha" style="display:none" />
+                        <div class="g-recaptcha" data-sitekey="6LeVt7QUAAAAAB8PwGtGtejhRXs-1Dp3wq2-Ay8H"></div>
+                        <button type="submit" class="btn btn-cv contact-submit">Submit</button>
+                        </form>
                     </section>
                 </article>
                 <footer>
                     <small class="copyright">
-                        Designed with <i class="fas fa-heart"></i> by <a href="#" target="_blank" rel="nofollow">Hong Wang</a>
+                        Made with <i class="fas fa-heart"></i> by <a href="#" target="_blank" rel="nofollow">Hong Wang</a>
                     </small>
                 </footer>
             </div>
