Update contact form

--- a/index.html
+++ b/index.html
@@ -170,21 +170,23 @@
                             Let's Get in Touch
                         </h2>
 
-                        <form class="contact-form" id="contact-form" method="POST" />
-                        <div class="form-group">
-                            <input type="text" required="" name="name" class="form-control" placeholder="Full name">
-                        </div>
-                        <div class="form-group">
-                            <input type="email" required="" name="_replyto" class="form-control" placeholder="Email">
-                        </div>
-                        <div class="form-group">
-                            <input type="text" required="" name="subject" class="form-control" placeholder="Subject">
-                        </div>
-                        <div class="form-group">
-                            <textarea rows="4" required="" name="message" class="form-control" placeholder="Message"></textarea>
-                        </div>
-                        <input type="text" name="_gotcha" style="display:none" />
-                        <button type="submit" class="btn btn-cv contact-submit">Submit</button>
+                        <form class="contact-form" id="contact-form" method="POST">
+                            <input type="hidden" name="_subject" value="Website contact" />
+                            <div class="form-group">
+                                <input type="text" required="" name="name" class="form-control" placeholder="Full name">
+                            </div>
+                            <div class="form-group">
+                                <input type="email" required="" name="_replyto" class="form-control" placeholder="Email">
+                            </div>
+                            <div class="form-group">
+                                <input type="text" required="" name="subject" class="form-control" placeholder="Subject">
+                            </div>
+                            <div class="form-group">
+                                <textarea rows="4" required="" name="message" class="form-control" placeholder="Message"></textarea>
+                            </div>
+                            <input type="text" name="_gotcha" style="display:none" />
+                            <input type="hidden" name="_next" value="//hongwang.me/" />
+                            <button type="submit" class="btn btn-cv">Submit</button>
                         </form>
                     </section>
                 </article>
