Update contact form

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                                 <textarea rows="4" required="" name="message" class="form-control" placeholder="Message"></textarea>
                             </div>
                             <input type="text" name="_gotcha" style="display:none" />
-                            <input type="hidden" name="_next" value="//hongwang.me/" />
+                            <input type="hidden" name="_next" value="https://hongwang.me/" />
                             <button type="submit" class="btn btn-cv">Submit</button>
                         </form>
                     </section>
