--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <div class="picture">
                             <img src="https://placeimg.com/700/700/nature" alt="Hong Wang">
                         </div>
-                        <a class="btn btn-cv" href="http://bit.ly/hong-resume" role="button" download>
+                        <a class="btn btn-cv" href="#" role="button" download>
                             <i class="fas fa-file-alt"></i> Download Résumé
                         </a>
                         <h1>Hong Wang</h1>
@@ -123,7 +123,7 @@
                         </div>
                     </section>
 
-                    <section>
+                    <section class="honors">
                         <h2 class="section-title">
                             <span class="fa-stack fa-xs">
                                 <i class="fas fa-circle fa-stack-2x"></i>
@@ -131,6 +131,44 @@
                             </span>
                             Honors & Awards
                         </h2>
+                        <h3>Academic Awards</h3>
+                        <ul>
+                            <li>“A” Team Award - 2014-15</li>
+                            <li>Math Student of the Year - 2014-15</li>
+                            <li>Information Technology Student of the Year - 2014-15</li>
+                            <li>Computer Science Student of the Year - 2016</li>
+                        </ul>
+
+                        <h3><abbr title="Gwinnett County Public Schools">GCPS</abbr> - Board Recognitions</h3>
+                        <ul>
+                            <li>Web Challenge: Best Website Functionality - 2014-15</li>
+                            <li>Web Challenge (Youth Reach): Finalist - 2014-15</li>
+                            <li>Verizon Innovative Youth Challenge</li>
+                        </ul>
+
+                        <h3>Verizon Innovative App Challenge</h3>
+                        <ul>
+                            <li>Best Regional Level - 2015-16</li>
+                            <li>Best in State Level - 2015-16</li>
+                            <li>Best in South Regional Level - 2015-16</li>
+                        </ul>
+
+                        <h3>TAG-Ed</h3>
+                        <ul>
+                            <li>Web Challenge: Best Website Functionality - 2014</li>
+                            <li>Web Challenge (Youth Reach): Finalist - 2015</li>
+                            <li>Health IT Innovation Award: Finalist -2015</li>
+                            <li>Marketing Competition: First Place - 2016</li>
+                        </ul>
+
+                        <h3>FBLA</h3>
+                        <ul>
+                            <li>Digital Design (Regional): 2nd Place - 2014</li>
+                            <li>E-Business Award (State): 1st Place - 2014</li>
+                            <li>Digital Design & Promotion (Regional & State): 2nd Place - 2015</li>
+                            <li>Website Design (Regional & State): 1st Place - 2015</li>
+                            <li>Graphic Design (Regional): 1st Place - 2016</li>
+                        </ul>
                     </section>
 
                     <section>
@@ -142,12 +180,12 @@
                             Education
                         </h2>
 
-                        <div class="job">
+                        <div class="school">
                             <div class="upper-row">
-                                <h3 class="company">University of Georgia</h3>
+                                <h3 class="school-name">University of Georgia</h3>
                                 <div class="time">Aug. 2016 – Present</div>
                             </div>
-                            <div class="job-title">Bachelor of Science, Computer Science</div>
+                            <div class="school-title">Bachelor of Science, Computer Science</div>
                         </div>
                     </section>
 
@@ -159,6 +197,9 @@
                             </span>
                             Skills and Proficiencies
                         </h2>
+                        <b>Technical Skills:</b> Java, JavaScript, HTML, CSS, PHP, C++<br>
+                        <b>Technologies:</b> Unix, AWS, Git, Emacs, Eclipse/IntelliJ, WordPress, Photoshop, Illustrator<br>
+                        <b>Languages:</b> Chinese (Mandarin) – Fluent, Japanese – Intermediate, Korean – Intermediate<br>
                     </section>
 
                     <section>
@@ -192,7 +233,7 @@
                 </article>
                 <footer>
                     <small class="copyright">
-                        Made with <i class="fas fa-heart"></i> by <a href="#" target="_blank" rel="nofollow">Hong Wang</a>
+                        Made with <i class="fas fa-heart"></i> by <a href="https://hongwang.me/" target="_blank" rel="nofollow">Hong Wang</a>
                     </small>
                 </footer>
             </div>
