--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                             <li>Best in South Regional Level - 2015-16</li>
                         </ul>
 
-                        <h3>TAG-Ed</h3>
+                        <h3><abbr title="TAG Education Collaborative">TAG-Ed</abbr></h3>
                         <ul>
                             <li>Web Challenge: Best Website Functionality - 2014</li>
                             <li>Web Challenge (Youth Reach): Finalist - 2015</li>
@@ -161,7 +161,7 @@
                             <li>Marketing Competition: First Place - 2016</li>
                         </ul>
 
-                        <h3>FBLA</h3>
+                        <h3><abbr title="Future Business Leaders of America">FBLA</abbr></h3>
                         <ul>
                             <li>Digital Design (Regional): 2nd Place - 2014</li>
                             <li>E-Business Award (State): 1st Place - 2014</li>
@@ -199,7 +199,7 @@
                         </h2>
                         <b>Technical Skills:</b> Java, JavaScript, HTML, CSS, PHP, C++<br>
                         <b>Technologies:</b> Unix, AWS, Git, Emacs, Eclipse/IntelliJ, WordPress, Photoshop, Illustrator<br>
-                        <b>Languages:</b> Chinese (Mandarin) – Fluent, Japanese – Intermediate, Korean – Intermediate<br>
+                        <b>Languages:</b> English – Fluent, Chinese (Mandarin) – Fluent, Chinese (Fuzhou) – Fluent, Japanese – Intermediate, Korean – Intermediate<br>
                     </section>
 
                     <section>
