--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <header>
                     <div class="profile">
                         <div class="picture">
-                            <img src="https://placeimg.com/700/700/nature" alt="Hong Wang">
+                            <img src="img/hongwang.jpg" alt="Hong Wang">
                         </div>
                         <a class="btn btn-cv" href="#" role="button" download>
                             <i class="fas fa-file-alt"></i> Download Résumé
