--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
                         <div class="job">
                             <div class="upper-row">
-                                <h3 class="company">360i / Suwanee, GA</h3>
+                                <h3 class="company">360i / Atlanta, GA</h3>
                                 <div class="time">Jul. 2013 – Aug. 2014</div>
                             </div>
                             <div class="job-title">Summer Intern</div>
