--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <li><i class="fab fa-linkedin"></i> <a target="_blank" href="https://www.linkedin.com/in/h0ngwang/">H0NGWANG</a></li>
                     </ul>
 
-                    <p>I am a highly motivated, confident professional, with
+                    <p>I am a highly motivated, confident professional with
                         excellent organizational and time management skills.
                         I’m able to work both independently and in a team, under
                         pressure and on multiple projects with a tight schedule.
