--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans&display=swap" rel="stylesheet">
     <link href="css/style.css" type="text/css" rel="stylesheet" />
 
-    <title>Hong's Résumé</title>
+    <title>Hong's CV</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0-12/css/all.min.css" rel="stylesheet">
     <link rel="shortcut icon" href="favicon.ico" />
 </head>
