--- a/index.html
+++ b/index.html
@@ -52,6 +52,37 @@
                         <h2 class="section-title">
                             <span class="fa-stack fa-xs">
                                 <i class="fas fa-circle fa-stack-2x"></i>
+                                <i class="fas fa-graduation-cap fa-stack-1x fa-inverse"></i>
+                            </span>
+                            Education
+                        </h2>
+
+                        <div class="school">
+                            <div class="upper-row">
+                                <h3 class="school-name">University of Georgia</h3>
+                                <div class="time">Aug. 2016 – Present</div>
+                            </div>
+                            <div class="school-title">Bachelor of Science, Computer Science</div>
+                        </div>
+                    </section>
+
+                    <section>
+                        <h2 class="section-title">
+                            <span class="fa-stack fa-xs">
+                                <i class="fas fa-circle fa-stack-2x"></i>
+                                <i class="fas fa-wrench fa-stack-1x fa-inverse"></i>
+                            </span>
+                            Skills and Proficiencies
+                        </h2>
+                        <b>Technical Skills:</b> Java, JavaScript, HTML, CSS, PHP, C++<br>
+                        <b>Technologies:</b> Unix, AWS, Git, Emacs, Eclipse/IntelliJ, WordPress, Photoshop, MATLAB<br>
+                        <b>Languages:</b> English – Fluent, Chinese (Mandarin) – Fluent, Chinese (Fuzhou) – Fluent, Japanese – Intermediate, Korean – Intermediate<br>
+                    </section>
+
+                    <section>
+                        <h2 class="section-title">
+                            <span class="fa-stack fa-xs">
+                                <i class="fas fa-circle fa-stack-2x"></i>
                                 <i class="fas fa-briefcase fa-stack-1x fa-inverse"></i>
                             </span>
                             Experience
@@ -131,6 +162,10 @@
                             </span>
                             Honors & Awards
                         </h2>
+                        <h3><abbr title="Association for Computing Machinery">ACM</abbr></h3>
+                        <ul>
+                            <li>Coding Competition: 1st Place - Spring 2019</li>
+                        </ul>
                         <h3>Academic Awards</h3>
                         <ul>
                             <li>“A” Team Award - 2014-15</li>
@@ -169,37 +204,6 @@
                             <li>Website Design (Regional & State): 1st Place - 2015</li>
                             <li>Graphic Design (Regional): 1st Place - 2016</li>
                         </ul>
-                    </section>
-
-                    <section>
-                        <h2 class="section-title">
-                            <span class="fa-stack fa-xs">
-                                <i class="fas fa-circle fa-stack-2x"></i>
-                                <i class="fas fa-graduation-cap fa-stack-1x fa-inverse"></i>
-                            </span>
-                            Education
-                        </h2>
-
-                        <div class="school">
-                            <div class="upper-row">
-                                <h3 class="school-name">University of Georgia</h3>
-                                <div class="time">Aug. 2016 – Present</div>
-                            </div>
-                            <div class="school-title">Bachelor of Science, Computer Science</div>
-                        </div>
-                    </section>
-
-                    <section>
-                        <h2 class="section-title">
-                            <span class="fa-stack fa-xs">
-                                <i class="fas fa-circle fa-stack-2x"></i>
-                                <i class="fas fa-wrench fa-stack-1x fa-inverse"></i>
-                            </span>
-                            Skills and Proficiencies
-                        </h2>
-                        <b>Technical Skills:</b> Java, JavaScript, HTML, CSS, PHP, C++<br>
-                        <b>Technologies:</b> Unix, AWS, Git, Emacs, Eclipse/IntelliJ, WordPress, Photoshop, Illustrator<br>
-                        <b>Languages:</b> English – Fluent, Chinese (Mandarin) – Fluent, Chinese (Fuzhou) – Fluent, Japanese – Intermediate, Korean – Intermediate<br>
                     </section>
 
                     <section>
