--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <link href="css/style.css" type="text/css" rel="stylesheet" />
 
     <title>Hong's CV</title>
+    <meta name="description" content="I am a highly motivated, confident professional with excellent organizational and time management skills.">
+    <meta name="keywords" content="Hong,Hong Wang,Hong's CV">
+    <meta name="author" content="Hong Wang">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0-12/css/all.min.css" rel="stylesheet">
     <link rel="shortcut icon" href="favicon.ico" />
 </head>
@@ -60,9 +63,12 @@
                         <div class="school">
                             <div class="upper-row">
                                 <h3 class="school-name">University of Georgia</h3>
-                                <div class="time">Aug. 2016 – Present</div>
+                                <div class="time">Intended Graduation - Dec. 2020</div>
                             </div>
-                            <div class="school-title">Bachelor of Science, Computer Science</div>
+                            <div class="school-title">B.S. Computer Science, GPA 3.6</div>
+
+                            <b>Relevant Coursework:</b> Data Structures, Software Development, Systems Programming, Web Programming, Discrete Math, Intro to Computing and Programming,
+                            Intro to Theory of Computing, Intro to Computational Science, Computing Ethics
                         </div>
                     </section>
 
@@ -74,9 +80,9 @@
                             </span>
                             Skills and Proficiencies
                         </h2>
-                        <b>Technical Skills:</b> Java, JavaScript, HTML, CSS, PHP, C++<br>
-                        <b>Technologies:</b> Unix, AWS, Git, Emacs, Eclipse/IntelliJ, WordPress, Photoshop, MATLAB<br>
-                        <b>Languages:</b> English – Fluent, Chinese (Mandarin) – Fluent, Chinese (Fuzhou) – Fluent, Japanese – Intermediate, Korean – Intermediate<br>
+                        <b>Technical Skills:</b> Java, C++, PHP, JavaScript, CSS, HTML<br>
+                        <b>Technologies:</b> Unix, AWS, Git, Emacs, Eclipse/IntelliJ, MATLAB, WordPress, Photoshop<br>
+                        <b>Languages:</b> English – Fluent, Chinese (Mandarin) – Fluent, Chinese (Fuzhou) – Fluent<br>
                     </section>
 
                     <section>
@@ -127,7 +133,7 @@
                             </ul>
                         </div>
 
-                        <div class="job">
+                        <div class="job" style="margin-bottom:-15px;">
                             <div class="upper-row">
                                 <h3 class="company">360i / Atlanta, GA</h3>
                                 <div class="time">Jul. 2013 – Aug. 2014</div>
@@ -139,10 +145,19 @@
                                 <li>The tool allows the user to generate various kind of chart/graph based on the data from MySQL database.</li>
                             </ul>
                         </div>
+                    </section>
 
+                    <section>
+                        <h2 class="section-title">
+                            <span class="fa-stack fa-xs">
+                                <i class="fas fa-circle fa-stack-2x"></i>
+                                <i class="fas fa-briefcase fa-stack-1x fa-inverse"></i>
+                            </span>
+                            Projects
+                        </h2>
                         <div class="job" style="margin-bottom:-15px;">
                             <div class="upper-row">
-                                <h3 class="company"><abbr title="Minecraft Bulletin Board System">MCBBS</abbr> / Suwanee, GA</h3>
+                                <h3 class="company"><abbr title="Minecraft Bulletin Board System">MCBBS</abbr></h3>
                                 <div class="time">May. 2011 – Aug. 2014</div>
                             </div>
                             <div class="job-title">Forum Moderator</div>
@@ -197,7 +212,7 @@
                         </ul>
 
                         <h3><abbr title="Future Business Leaders of America">FBLA</abbr></h3>
-                        <ul>
+                        <ul style="margin-bottom:-5px;">
                             <li>Digital Design (Regional): 2nd Place - 2014</li>
                             <li>E-Business Award (State): 1st Place - 2014</li>
                             <li>Digital Design & Promotion (Regional & State): 2nd Place - 2015</li>
