--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                         <h2 class="section-title">
                             <span class="fa-stack fa-xs">
                                 <i class="fas fa-circle fa-stack-2x"></i>
-                                <i class="fas fa-briefcase fa-stack-1x fa-inverse"></i>
+                                <i class="fas fa-pen fa-stack-1x fa-inverse"></i>
                             </span>
                             Projects
                         </h2>
