--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <div class="picture">
                             <img src="img/hongwang.jpg" alt="Hong Wang">
                         </div>
-                        <a class="btn btn-cv" href="http://bit.ly/hong-resume" role="button" download>
+                        <a class="btn btn-cv" href="https://bit.ly/hong-resume" role="button" download>
                             <i class="fas fa-file-alt"></i> Download Résumé
                         </a>
                         <h1>Hong Wang</h1>
