--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
                         </ul>
                         <h3>Academic Awards</h3>
                         <ul>
+                            <li>Dean's List - 2016-19</li>
                             <li>“A” Team Award - 2014-15</li>
                             <li>Math Student of the Year - 2014-15</li>
                             <li>Information Technology Student of the Year - 2014-15</li>
@@ -193,7 +194,7 @@
                         <ul>
                             <li>Web Challenge: Best Website Functionality - 2014-15</li>
                             <li>Web Challenge (Youth Reach): Finalist - 2014-15</li>
-                            <li>Verizon Innovative Youth Challenge</li>
+                            <li>Verizon Innovative App Challenge - 2015-16</li>
                         </ul>
 
                         <h3>Verizon Innovative App Challenge</h3>
