--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                                 <h3 class="school-name">University of Georgia</h3>
                                 <div class="time">Intended Graduation - Dec. 2020</div>
                             </div>
-                            <div class="school-title">B.S. Computer Science, GPA 3.6</div>
+                            <div class="school-title">B.S. Computer Science, GPA 3.6 / 4.0</div>
 
                             <b>Relevant Coursework:</b> Data Structures, Software Development, Systems Programming, Web Programming, Discrete Math, Intro to Computing and Programming,
                             Intro to Theory of Computing, Intro to Computational Science, Computing Ethics
@@ -101,9 +101,9 @@
                             <div class="job-title">Full Stack Developer & Graphic Designer</div>
 
                             <ul>
-                                <li>Built the website with WordPress and utilized CDN to add the extra layer of security as well as performance.</li>
-                                <li>Designed graphics such as logo, billboard, and business card using photoshop.</li>
-                                <li>Optimized website for SEO, run ad campaigns on several ad platforms such as Google Ads to drive leads.</li>
+                                <li>Built website using WordPress and improved site performance and security by utilizing various techniques such as using a CDN and leveraging browser caching.</li>
+                                <li>Increased website traffics with SEO and running ad campaigns on several ad platforms such as Google Ads.</li>
+                                <li>Designed graphics such as logo, billboard, and business card using Photoshop.</li>
                             </ul>
                         </div>
 
@@ -112,11 +112,11 @@
                                 <h3 class="company">ZeeZor / Suwanee, GA</h3>
                                 <div class="time">May. 2016 – Aug. 2016</div>
                             </div>
-                            <div class="job-title">Full Stack Developer & Graphic Designer</div>
+                            <div class="job-title">Summer Intern</div>
 
                             <ul>
                                 <li>Developed various features for the partner portal of a multi-billion business called Aveda.</li>
-                                <li>Redesigned graphics including the logo with flat design using photoshop.</li>
+                                <li>Redesigned graphics including the logo with flat design using Photoshop.</li>
                             </ul>
                         </div>
 
@@ -128,7 +128,7 @@
                             <div class="job-title">Summer Intern</div>
 
                             <ul>
-                                <li>Built the Gwinnett Academies website for the County public school's central office with WordPress.</li>
+                                <li>Built the Gwinnett Academies website for the county public school's central office with WordPress.</li>
                                 <li>Created a custom WordPress plugin using PHP to provide integration with EspoCRM.</li>
                             </ul>
                         </div>
@@ -163,8 +163,8 @@
                             <div class="job-title">Forum Moderator</div>
 
                             <ul>
-                                <li>Managed a forum that has over a few million users.</li>
-                                <li>Developed a popular Minecraft MOD during the year of 2012 using Java, ModLoader API, and MCP.</li>
+                                <li>Grew and managed the forum that has a few thousand users initially to over two million registered users by active serving the community with exciting contents.</li>
+                                <li>Developed a Minecraft MOD with over ten-thousand downloads during the year of 2012 using Java, ModLoader API, and MCP.</li>
                             </ul>
                         </div>
                     </section>
