--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                             <div class="job-title">Summer Intern</div>
 
                             <ul>
-                                <li>Developed various features for the partner portal of a multi-billion business called Aveda.</li>
+                                <li>Developed GUI for the partner portal of a multi-billion business called Aveda using TypeScript.</li>
                                 <li>Redesigned graphics including the logo with flat design using Photoshop.</li>
                             </ul>
                         </div>
