--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                             <div class="job-title">Full Stack Developer & Graphic Designer</div>
 
                             <ul>
-                                <li>Built website using WordPress and improved site performance and security by utilizing various techniques such as using a CDN and leveraging browser caching.</li>
+                                <li>Built website using WordPress and improved site performance and security by utilizing various techniques such as CDN and leveraging browser caching.</li>
                                 <li>Increased website traffics with SEO and running ad campaigns on several ad platforms such as Google Ads.</li>
                                 <li>Designed graphics such as logo, billboard, and business card using Photoshop.</li>
                             </ul>
@@ -115,8 +115,8 @@
                             <div class="job-title">Summer Intern</div>
 
                             <ul>
-                                <li>Developed GUI for the partner portal of a multi-billion business called Aveda using TypeScript.</li>
-                                <li>Redesigned graphics including the logo with flat design using Photoshop.</li>
+                                <li>Developed a GUI for the partner portal of a multi-billion business called Aveda using TypeScript.</li>
+                                <li>Redesign graphics such as logo and flyers with a flat design style applied using Photoshop.</li>
                             </ul>
                         </div>
 
@@ -128,8 +128,8 @@
                             <div class="job-title">Summer Intern</div>
 
                             <ul>
-                                <li>Built the Gwinnett Academies website for the county public school's central office with WordPress.</li>
-                                <li>Created a custom WordPress plugin using PHP to provide integration with EspoCRM.</li>
+                                <li>Built a platform for Gwinnett county public school's central office to maintain relationships with partners using WordPress and EspoCRM.</li>
+                                <li>Created a custom WordPress plugin to provide integration with EspoCRM using PHP.</li>
                             </ul>
                         </div>
 
@@ -141,8 +141,7 @@
                             <div class="job-title">Summer Intern</div>
 
                             <ul>
-                                <li>Created a prototype tool using Bootstrap, HTML, CSS, jQuery, PHP, and MySQL for a client called Equifax.</li>
-                                <li>The tool allows the user to generate various kind of chart/graph based on the data from MySQL database.</li>
+                                <li>Developed a GUI for Equifax, allowing users to generate various type of graph based on the data from MySQL database using PHP, MySQL, jQuery, and Bootstrap.</li>
                             </ul>
                         </div>
                     </section>
