--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
                             <ul>
                                 <li>Developed a GUI for the partner portal of a multi-billion business called Aveda using TypeScript.</li>
-                                <li>Redesign graphics such as logo and flyers with a flat design style applied using Photoshop.</li>
+                                <li>Designed graphics such as logo and flyers with a flat design style applied using Photoshop.</li>
                             </ul>
                         </div>
 
@@ -136,7 +136,7 @@
                         <div class="job" style="margin-bottom:-15px;">
                             <div class="upper-row">
                                 <h3 class="company">360i / Atlanta, GA</h3>
-                                <div class="time">Jul. 2013 – Aug. 2014</div>
+                                <div class="time">Jun. 2014 – Aug. 2014</div>
                             </div>
                             <div class="job-title">Summer Intern</div>
 
