Edit form field

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                         <form class="contact-form" id="contact-form" method="POST">
                             <input type="hidden" name="_subject" value="Website contact" />
                             <div class="form-group">
-                                <input type="text" required="" name="name" class="form-control" placeholder="Full name">
+                                <input type="text" required="" name="name" class="form-control" placeholder="Name">
                             </div>
                             <div class="form-group">
                                 <input type="email" required="" name="_replyto" class="form-control" placeholder="Email">
