--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
                         <div class="job">
                             <div class="upper-row">
                                 <h3 class="company">TPA Georgia / Athens, GA</h3>
-                                <div class="time">Aug. 2018 – Sep. 2019</div>
+                                <div class="time">Aug. 2018 – Present</div>
                             </div>
-                            <div class="job-title">Full Stack Developer & Graphic Designer</div>
+                            <div class="job-title">Intern</div>
 
                             <ul>
                                 <li>Built website using WordPress and improved site performance and security by utilizing various techniques such as CDN and leveraging browser caching.</li>
