--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
                             </span>
                             Skills and Proficiencies
                         </h2>
-                        <b>Technical Skills:</b> Java, C++, PHP, JavaScript, CSS, HTML<br>
+                        <b>Technical Skills:</b> Java, Python, C++, PHP, JavaScript, CSS, HTML<br>
                         <b>Technologies:</b> Unix, AWS, Git, Emacs, Eclipse/IntelliJ, MATLAB, WordPress, Photoshop<br>
-                        <b>Languages:</b> English – Fluent, Chinese (Mandarin) – Fluent, Chinese (Fuzhou) – Fluent<br>
+                        <b>Languages:</b> English – Fluent, Chinese (Mandarin) – Fluent, Chinese (Fuzhou) – Fluent, Japanese – Intermediate<br>
                     </section>
 
                     <section>
@@ -116,7 +116,7 @@
 
                             <ul>
                                 <li>Developed a GUI for the partner portal of a multi-billion business called Aveda using TypeScript.</li>
-                                <li>Designed graphics such as logo and flyers with a flat design style applied using Photoshop.</li>
+                                <li>Designed flyers and graphics, such as the logo, with a flat design style applied using Photoshop.</li>
                             </ul>
                         </div>
 
@@ -162,8 +162,9 @@
                             <div class="job-title">Forum Moderator</div>
 
                             <ul>
-                                <li>Grew and managed the forum that has a few thousand users initially to over two million registered users by active serving the community with exciting contents.</li>
-                                <li>Developed a Minecraft MOD with over ten-thousand downloads during the year of 2012 using Java, ModLoader API, and MCP.</li>
+                                <li>Managed a section of the forum that has over two million registered users.</li>
+                                <li>Created contents and designed graphics such as banners and medals for the community.</li>
+                                <li>Developed a Minecraft MOD for textures with over ten-thousand downloads during the year of 2012 using Java, ModLoader API, and MCP.</li>
                             </ul>
                         </div>
                     </section>
@@ -182,7 +183,7 @@
                         </ul>
                         <h3>Academic Awards</h3>
                         <ul>
-                            <li>Dean's List - 2016-19</li>
+                            <li>Dean's List - 4 Semesters</li>
                             <li>Computer Science Student of the Year - 2016</li>
                             <li>“A” Team Award - 2014-15</li>
                             <li>Math Student of the Year - 2014-15</li>
