--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
 
                             <ul>
                                 <li>Built website using WordPress and improved site performance and security by utilizing various techniques such as CDN and leveraging browser caching.</li>
-                                <li>Increased website traffics with SEO and running ad campaigns on several ad platforms such as Google Ads.</li>
-                                <li>Designed graphics such as logo, billboard, and business card using Photoshop.</li>
+                                <li>Increase website traffics with SEO and running ad campaigns on several ad platforms such as Google Ads.</li>
+                                <li>Design graphics such as logo, billboard, and business card using Photoshop.</li>
                             </ul>
                         </div>
 
