--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                                 <h3 class="company">360i / Atlanta, GA</h3>
                                 <div class="time">Jun. 2014 – Aug. 2014</div>
                             </div>
-                            <div class="job-title">Summer Intern</div>
+                            <div class="job-title">Analytics Trainee</div>
 
                             <ul>
                                 <li>Developed a GUI for Equifax, allowing users to generate various type of graph based on the data from MySQL database using PHP, MySQL, jQuery, and Bootstrap.</li>
